[tool.poetry]
name = "draco"
version = "0.1.0"
description = "A nimble media browser"
authors = ["Hussar <hussarhussar@protonmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
